--- a/public/client.html
+++ b/public/client.html
@@ -111,7 +111,7 @@
                 </li>
               </ul>
               <div class="clear"></div>
-              <div class="inlinethread" data-bind="visible: threadvisible">
+              <div class="inlinethread" data-bind="slideVisible: threadvisible">
                 Thread:
                 <!-- ko foreach: thread -->
                 <div class="threaditem">
@@ -126,7 +126,7 @@
                 <!-- /ko -->
               </div>
               <div class="clear"></div>
-              <div class="inlinereply" data-bind="visible: replyvisible">
+              <div class="inlinereply" data-bind="slideVisible: replyvisible">
                 <form class="replyform" method="post">
                   <input class="token" name="token" type="hidden" data-bind="value: $parents[1].token"/>
                   <input class="replyPostToAccounts" name="accounts" type="hidden" data-bind="value: service+'/'+fetchedforuserid"/>
