--- a/public/client.html
+++ b/public/client.html
@@ -91,7 +91,7 @@
                   <a class="actionbutton" data-bind="click: function(action) { $parent.replyvisible(!$parent.replyvisible()); }" href="#"><img src="img/actions/reply.png" title="Reply" alt="Reply"></a>
                 </li>
                 <li data-bind="if: (name == 'conversation')">
-                  <a class="actionbutton" data-bind="click: function(action) { loadThreadForItem($parent); $parent.threadvisible(!$parent.threadvisible()); }" href="#"><img src="img/actions/thread.png" title="Thread" alt="Thread"></a>
+                  <a class="actionbutton" data-bind="click: function(action) { loadThreadForItem($parent, ($parent.type=='facebook_notification')); $parent.threadvisible(!$parent.threadvisible()); }" href="#"><img src="img/actions/thread.png" title="Thread" alt="Thread"></a>
                 </li>
                 <li data-bind="if: (name == 'retweet')">
                   <a class="actionbutton" data-bind="click: function(action) { performAction(action.params);} " href="#"><img src="img/actions/retweet.png" title="Retweet" alt="Retweet"></a>
