--- a/public/client.html
+++ b/public/client.html
@@ -100,10 +100,10 @@
                   <a class="actionbutton" data-bind="click: function(action) { performAction(action.params);} " href="#"><img src="img/actions/favourite.png" title="Favourite" alt="Favourite"></a>
                 </li>
                 <li data-bind="if: (name == 'like')">
-                  <span class="actionbutton" data-bind="click: function(action) { performAction(action.params);} " href="#"><img src="img/actions/like.png" title="Like" alt="Like"></span>
+                  <a class="actionbutton" data-bind="click: function(action) { performAction(action.params);} " href="#"><img src="img/actions/like.png" title="Like" alt="Like"></a>
                 </li>
                 <li data-bind="if: (name == 'delete')">
-                  <a class="actionbutton" data-bind="click: function(action) { performAction(action.params);} "href="#"><img src="img/actions/delete.png" title="Delete" alt="Delete"></a>
+                  <a class="actionbutton" data-bind="click: function(action) { performAction(action.params);} " href="#"><img src="img/actions/delete.png" title="Delete" alt="Delete"></a>
                 </li>
                 <!-- /ko -->
                 <li data-bind="if: content.permalink">
