Fixed a bug whereby autofilled user/pass on the login screen were not being sent to the API properly. See knockout/knockout#648.

--- a/public/login.html
+++ b/public/login.html
@@ -35,8 +35,8 @@
       </div>
       <div class="content">
         <p>Behind a firewall that blocks social networks? If you've created a username and password for your SuccessWhale account, you can enter them here to log in.</p>
-        <p class="userpass">Username: <input data-bind="value: username" class="textbox"/>
-        Password: <input data-bind="value: password" type="password" class="textbox"/>
+        <p class="userpass">Username: <input id="username" data-bind="value: username" class="textbox"/>
+        Password: <input id="password" data-bind="value: password" type="password" class="textbox"/>
         <input type="submit" value="Log in" /></p>
       </div>
       <div id="loginerrorbox"><span data-bind="text: errormessage"></span></div>
