--- a/public/client.html
+++ b/public/client.html
@@ -6,6 +6,7 @@
   <title>SuccessWhale</title>
   <link rel="stylesheet" href="css/normalize.css"/>
   <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" data-bind="attr: { href: 'css/themes/'+theme()+'.css' }"/>
   <link rel="stylesheet" href="css/jquery.gpopover.css"/>
   <link rel="stylesheet" href="js/libs/fancybox/jquery.fancybox.css?v=2.1.5" />
@@ -23,8 +24,8 @@
       <input id="token" name="token" type="hidden" data-bind="value: token"/>
       <input id="postToAccounts" name="accounts" type="hidden" data-bind="value: postToAccountsString()"/>
       <textarea id="postentry" name="text" rows="1"></textarea>
+      <span id="attachbutton" data-popover="attachmentdialog"><a href="#"><i class="fa fa-paperclip"></i></a></span>
       <span id="postbutton"><a href="#">Post</a></span>
-      <span id="attachbutton" data-popover="attachmentdialog"><a href="#">Attach</a></span>
       <div id="attachmentdialog" class="gpopover">
         <p>Attach file:</p>
           <input type="file" name="file" id="filetoupload"/>
@@ -36,7 +37,7 @@
         <ul data-bind="foreach: postToAccounts">
           <li>
             <input type="checkbox" data-bind="name: service + '/' + uid, checked: enabled"/>
-            <img data-bind="attr: { src: '/img/services/'+service+'.png' }"/>&nbsp;
+            <i data-bind="attr: { class: 'fa fa-'+service }"></i>&nbsp;
             <span data-bind="text: username"></span>
           </li>
         </ul>
@@ -64,19 +65,19 @@
             
             <div class="item-metadata">
               <span data-bind="if: (content.numreplied > 0)">
-                <img src="img/metadata/reply.png" title="Replies" alt="Replies" /> <span data-bind="text: content.numreplied"></span>
+                <i class="fa fa-reply"></i><span data-bind="text: content.numreplied"></span>
               </span>
               <span data-bind="if: (content.numretweeted > 0)">
-                <img src="img/metadata/retweet.png" title="Retweets" alt="Retweets" /> <span data-bind="text: content.numretweeted"></span>
+                <i class="fa fa-retweet"></i> <span data-bind="text: content.numretweeted"></span>
               </span>
               <span data-bind="if: (content.numfavourited > 0)">
-                <img src="img/metadata/favourite.png" title="Favourites" alt="Favourites" /> <span data-bind="text: content.numfavourited"></span>
+                <i class="fa fa-star"></i> <span data-bind="text: content.numfavourited"></span>
               </span>
               <span data-bind="if: (content.numcomments > 0)">
-                <img src="img/metadata/thread.png" title="Comments" alt="Comments" /> <span data-bind="text: content.numcomments"></span>
+                <i class="fa fa-comments"></i> <span data-bind="text: content.numcomments"></span>
               </span>
               <span data-bind="if: (content.numlikes > 0)">
-                <img src="img/metadata/like.png" title="Likes" alt="Likes" /> <span data-bind="text: content.numlikes"></span>
+                <i class="fa fa-thumbs-o-up"></i> <span data-bind="text: content.numlikes"></span>
               </span>
             </div>
             <div class="clear"></div>
@@ -89,26 +90,26 @@
               <ul class="actionlist">
                 <!-- ko foreach: content.actions -->
                 <li data-bind="if: (name == 'reply')">
-                  <a class="actionbutton" data-bind="click: function(action) { $parent.replyvisible(!$parent.replyvisible()); }" href="#"><img src="img/actions/reply.png" title="Reply" alt="Reply"></a>
+                  <a class="actionbutton" data-bind="click: function(action) { $parent.replyvisible(!$parent.replyvisible()); }" href="#"><i class="fa fa-reply"></i></a>
                 </li>
                 <li data-bind="if: (name == 'conversation')">
-                  <a class="actionbutton" data-bind="click: function(action) { loadThreadForItem($parent, ($parent.type!='facebook_notification')); $parent.threadvisible(!$parent.threadvisible()); }" href="#"><img src="img/actions/thread.png" title="Thread" alt="Thread"></a>
+                  <a class="actionbutton" data-bind="click: function(action) { loadThreadForItem($parent, ($parent.type!='facebook_notification')); $parent.threadvisible(!$parent.threadvisible()); }" href="#"><i class="fa fa-comments"></i></a>
                 </li>
                 <li data-bind="if: (name == 'retweet')">
-                  <a class="actionbutton" data-bind="click: function(action) { performAction(action.params);} " href="#"><img src="img/actions/retweet.png" title="Retweet" alt="Retweet"></a>
+                  <a class="actionbutton" data-bind="click: function(action) { performAction(action.params);} " href="#"><i class="fa fa-retweet"></i></a>
                 </li>
                 <li data-bind="if: (name == 'favorite')">
-                  <a class="actionbutton" data-bind="click: function(action) { performAction(action.params);} " href="#"><img src="img/actions/favourite.png" title="Favourite" alt="Favourite"></a>
+                  <a class="actionbutton" data-bind="click: function(action) { performAction(action.params);} " href="#"><i class="fa fa-star"></i></a>
                 </li>
                 <li data-bind="if: (name == 'like')">
-                  <a class="actionbutton" data-bind="click: function(action) { performAction(action.params);} " href="#"><img src="img/actions/like.png" title="Like" alt="Like"></a>
+                  <a class="actionbutton" data-bind="click: function(action) { performAction(action.params);} " href="#"><i class="fa fa-thumbs-o-up"></i></a>
                 </li>
                 <li data-bind="if: (name == 'delete')">
-                  <a class="actionbutton" data-bind="click: function(action) { performAction(action.params);} " href="#"><img src="img/actions/delete.png" title="Delete" alt="Delete"></a>
+                  <a class="actionbutton" data-bind="click: function(action) { performAction(action.params);} " href="#"><i class="fa fa-trash-o"></i></a>
                 </li>
                 <!-- /ko -->
                 <li data-bind="if: content.permalink">
-                  <a class="actionbutton" data-bind="attr: { href: content.permalink }" target="_blank"><img src="img/actions/permalink.png" title="Permalink" alt="Permalink"></a>
+                  <a class="actionbutton" data-bind="attr: { href: content.permalink }" target="_blank"><i class="fa fa-link"></i></a>
                 </li>
               </ul>
               <div class="clear"></div>
