--- a/public/login.html
+++ b/public/login.html
@@ -6,6 +6,7 @@
     <title>Log In to SuccessWhale</title>
     <link rel="stylesheet" href="css/normalize.css"/>
     <link rel="stylesheet" href="css/style-login.css"/>
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
   </head>
