Fiddling with Facebook auth support

--- a/public/login.html
+++ b/public/login.html
@@ -27,7 +27,7 @@
       </div>
       <div class="content">
         <p>Start with one account &mdash; you can add others once you're in.</p>
-        <p>#TODO</p>
+        <p><a id="authwithfacebook" href="#"><i class="fa fa-facebook"></i>Log in with Facebook</a></p>
       </div>
     </form>
     <form id="login">
