--- a/public/login.html
+++ b/public/login.html
@@ -28,6 +28,7 @@
       <div class="content">
         <p>Start with one account &mdash; you can add others once you're in.</p>
         <p><a id="authwithfacebook" href="#"><i class="fa fa-facebook"></i>Log in with Facebook</a></p>
+        <p><a id="authwithtwitter" href="#"><i class="fa fa-twitter"></i>Log in with Twitter</a></p>
       </div>
     </form>
     <form id="login">
