Testing Twitter auth

--- a/public/login.html
+++ b/public/login.html
@@ -27,8 +27,7 @@
       </div>
       <div class="content">
         <p>Start with one account &mdash; you can add others once you're in.</p>
-        <p><a id="authwithfacebook" href="#"><i class="fa fa-facebook"></i>Log in with Facebook</a></p>
-        <p><a id="authwithtwitter" href="#"><i class="fa fa-twitter"></i>Log in with Twitter</a></p>
+        <p><a id="authwithtwitter" href="#"><img src="img/twitterlogin.png"/></a>&nbsp;&nbsp;&nbsp;<a id="authwithfacebook" href="#"><img src="img/facebooklogin.gif"/></a></p>
       </div>
     </form>
     <form id="login">
