Loading spinners for social network login, column size tweak for FF

--- a/public/login.html
+++ b/public/login.html
@@ -27,7 +27,7 @@
       </div>
       <div class="content">
         <p>Start with one account &mdash; you can add others once you're in.</p>
-        <p><a id="authwithtwitter" href="#"><img src="img/twitterlogin.png"/></a>&nbsp;&nbsp;&nbsp;<a id="authwithfacebook" href="#"><img src="img/facebooklogin.gif"/></a></p>
+        <p><a id="authwithtwitter" class="serviceauth" href="#"><img src="img/twitterlogin.png"/> <img class="spinner" src="img/loading-small.gif" /></a>&nbsp;&nbsp;&nbsp;<a id="authwithfacebook"  class="serviceauth" href="#"><img src="img/facebooklogin.gif"/> <img class="spinner" src="img/loading-small.gif" /></a></p>
       </div>
     </form>
     <form id="login">
