Initial support for setting display settings

--- a/public/client.html
+++ b/public/client.html
@@ -18,6 +18,7 @@
   <div id="errorbox"></div>
   <div id="header">
     <div id="topmenu">
+      <a id="configbutton" href="/config">Config</a>
       <a id="logoutbutton" href="#">Log out</a>
     </div>
     <form id="postform" method="post">
