--- a/public/facebookcallback.html
+++ b/public/facebookcallback.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <title>SuccessWhale - Facebook Callback</title>
     <link rel="stylesheet" href="css/normalize.css"/>
-    <link rel="stylesheet" href="css/style-callback.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
