--- a/public/client.html
+++ b/public/client.html
@@ -45,8 +45,8 @@
       </div>
     </form>
   </div>
-  <div id="columns" data-bind="foreach: columns, style: { width: (columns().length/colsPerScreen()*100) + '%'}">
-    <div data-bind="name: fullpath, style: { width: 100/$parent.columns().length-2 + '%' }" class="column">
+  <div id="columns" data-bind="foreach: columns, style: { width: (columns().length/colsPerScreen()*100)-1 + '%'}">
+    <div data-bind="name: fullpath, style: { width: 100/$parent.columns().length-1 + '%' }" class="column">
       <div class="columnloading" data-bind="visible: loading"></div>
       <h4 class="columnheading" data-bind="text: title"></h4>
       <!-- ko foreach: items -->
