Add accounts from the config page

--- a/public/config.html
+++ b/public/config.html
@@ -37,7 +37,7 @@
             </tbody>
           </table>
           <button type="submit" id="saveaccountsettings">Save</button>
-          <p>Add Twitter, Add Facebook</p>
+          <p><a id="authwithtwitter" class="serviceauth" href="#">Add Twitter account <img class="spinner" src="img/loading-small.gif" /></a><br/><a id="authwithfacebook"  class="serviceauth" href="#">Add Facebook account <img class="spinner" src="img/loading-small.gif" /></a></p>
         </form>
       </div>
       <div class="item">
