Added client-side support for the Delete All Data call

--- a/public/config.html
+++ b/public/config.html
@@ -46,6 +46,17 @@
           <p>New, Delete</p>
         </form>
       </div>
+      <div class="item">
+        <form>
+          <h4>Delete All Data</h4>
+          <p>If you want to leave SuccessWhale<br/>
+             permanently, click the link below.<br/>
+             All your settings and the details<br/>
+             of all your service accounts will<br/>
+             be deleted.</p>
+          <p><a id="deletealldata" href="#">Delete All Data</a></p>
+        </form>
+      </div>
     </div>
     <div class="column" width="25%">
       <h4 class="columnheading">Appearance</h4>
@@ -61,7 +72,7 @@
       <div class="item">
         <form>
           <h4>Banned Phrases</h4>
-          <p>Items containing the following phrases will not be displayed:</p>
+          <p>Items containing the following phrases<br/>will not be displayed:</p>
           <textarea cols="30" rows="5" id="bannedphrases" data-bind="value: bannedPhrases"></textarea>
           <p><button type="submit" id="savebannedphrases">Save</button></p>
         </form>
